# learnCmake

./: .gitignore  Android和Cmake.md  README.md  cmake的哲学.md  conan1.0.md  conan入门.md  文件指令.md
fragments/: 01.txt  02.txt  03-使用vcpkg+cmake时的常用命令.txt  03.txt  04.txt  05.txt  06-link-libraries.txt  07.txt  13-OSVR-AndroidBuild.txt  25-使用测试.cmake  25-自定义命令.cmake  android相关.md  cmake执行命令获取输出.txt  cmake指定编译器位置.txt  cmake模块拆分.txt  find_library.txt  find_package.md  install命令.txt  macro和function.txt  project命令.txt  使用add_subdirectory.txt  使用option设置开关.txt  使用set和message.txt  变量和属性的区别.txt  常用命令.txt  循环.txt  文件查找命令.txt  根据CMakeLists.txt生成头文件.txt  编译优化.md  设置cpp版本.txt
src/: 01-find_program.cmake  02-条件.cmake  05-message的几种状态.cmake  06-打印系统属性.cmake  09-循环.cmake  10-打印全部文件.cmake  21-执行命令.cmake  23-写文件.cmake  23-写文件2.cmake  README.md
src/testDefine/: main.cpp
testDefine/: CMakeLists.txt  Makefile  compile.sh
一个跨平台编译cmake/: CMakeLists.txt  cmd_android.sh  cmd_ios.sh  cmd_linux.sh  cmd_mac.sh  cmd_win.bat
单文件cmake/: 01-find_program.cmake  09-循环.cmake  10-打印全部文件.cmake  15-宏和函数实例.cmake  18-list.cmake  README.md
